ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/32_invalid_global_var_function_name.lava
int value() {
  return 1;
}

int value = 2;
